## 2022-10-31
### 2.4.0
* Pin setuptools
* Drop old hiera file locations

## 2022-09-12
### 2.3.4
* Add fix for new hiera file location and change in realm name

## 2022-07-26
### 2.3.3
* improve debug_host output

## 2022-07-11
### 2.3.2
* Add support for XDG base configuration (XDG_CONFIG_HOME)
* Add storeconfig options when compiling for production

## 2022-05-23
### 2.3.1
* update populate_puppet.setup_environment to ensure repos are refreshed

## 2022-02-14
### 2.3.0
* Allow multiple different host selectors to be used
** https://gerrit.wikimedia.org/r/c/operations/software/puppet-compiler/+/771483

## 2022-03-15
### 2.2.1
* Add support for the vendor_modules path

## 2022-02-14
### 2.2.0
* Add support for the netbox repo

## 2022-02-14
### 2.1.1
* cast PosixPath to str for subprocess.  subprocess doesn't support PosixPath until python3.8

## 2022-02-08
### 2.1.0
* update to prefer yaml facts via routes.yaml file (T248169)

## 2021-12-23
### 2.0.1
* update nodegen to use https end point
* fix populate puppetdb to work with new Config class

## 2021-12-09
### 2.0.0
#### Breaking changes
 * Drop support for puppet < 5.5
 * Drop support alternate puppet configurations (e.g. future parser)
 * Drop support for python <3.7 and add support for python 3.9
#### Change in behaviour
 * Switch to using python asyncio
 * Switch to pathlib Paths
 * Update report to display host still running
 * Display report url on completion of every host (use to be after every fifth)
 * Add support for testing cloud and production hosts in the same run
 * Add fast fail option
# Docs, formatting and testing
 * Add additional local hacking instructions and utils
 * Consider a pcc run failed if any hosts fail
 * Switch to using black and isort formatting
 * move to pytest
 * Add types and mypy

## 2020-12-24
### 1.2.0
 * Add support to use cumin queries to fetch hosts
 * Include wikimedia.cloud domain when checking for cloud hosts

## 2020-12-23
### 1.1.0